# automcp

./: .default_env  .gitignore  README.md  main.py  pyproject.toml
automcp/: constants.py  errors.py  logger.py  main.py  mcp_server.py  models.py  pipeline.py  utils.py
automcp/llm/: client.py  executor.py  task.py
automcp/llm/tasks/: detect_sub_commands.py  extract_command.py  extract_command_list.py
automcp/templates/: generator.py  server.j2
