[project]
name = "automcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.10.1",
    "openai>=1.93.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.scripts]
automcp = "automcp.main:cli"

[tool.setuptools.packages.find]
include = ["automcp*"]
